Fix regression in wrapping of the student skill list display (caused by [] 	Change on 2015/11/17 by jorr <jorr@google.com> ------------- Created by MOE: https://github.com/google/moe MOE_MIGRATED_REVID=108054904

--- a/coursebuilder/modules/skill_map/_static/css/lesson_header.css
+++ b/coursebuilder/modules/skill_map/_static/css/lesson_header.css
@@ -22,6 +22,7 @@ div.skill-panel .empty-skill-list-message {
 }
 div.skill-panel div.skills-in-this-lesson ol.skill-display-root {
   display: inline-block;
+  overflow-x: inherit;
 }
 div.skill-panel div.open-control {
   margin-top: 3px;
